--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,204 +1,216 @@
 nav {
-  margin-top: -20px;
-  height: 80px;
-  background: rgb(64, 26, 130);
-  background: linear-gradient(
-    90deg,
-    rgba(64, 26, 130, 1) 0%,
-    rgba(201, 0, 135, 1) 100%
-  );
-  display: flex;
-  justify-content: space-between;
+    margin-top: -20px;
+    height: 80px;
+    background: rgb(64, 26, 130);
+    background: linear-gradient(
+            90deg,
+            rgba(64, 26, 130, 1) 0%,
+            rgba(201, 0, 135, 1) 100%
+    );
+    display: flex;
+    justify-content: space-between;
 }
 
 .nav-item a {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 17px;
-  color: #ebebeb;
-  margin-right: 20px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 17px;
+    color: #ebebeb;
+    margin-right: 20px;
 }
-co .nav-item a i {
-  margin-right: 5px;
+
+.nav-item a i {
+    margin-right: 5px;
 }
 
 .nav-item a:hover {
-  color: #8ec9d8f1;
+    color: #8ec9d8f1;
 }
 
 .navbar-toggler {
-  color: #fff;
+    color: #fff;
 }
 
 .nav-button {
-  border-radius: 2px;
-  background: #fff;
-  padding: 5px 10px 5px;
-  color: #fb32b9;
-  font-family: "Helvetica", "Helvetica Neue";
-  transition: all 0.4s;
+    border-radius: 2px;
+    background: #fff;
+    padding: 5px 10px 5px;
+    color: #fb32b9;
+    font-family: "Helvetica", "Helvetica Neue", serif;
+    transition: all 0.4s;
 }
 
 .nav-button:hover {
-  background: #947289;
-  color: #fff;
-  text-decoration: none;
-  transition: all 0.4s;
+    background: #947289;
+    color: #fff;
+    text-decoration: none;
+    transition: all 0.4s;
 }
 
 .nav-item .dropdown-menu {
-  background: purple;
+    background: purple;
 }
 
 .avatar-ctn {
-  background-color: cyan;
-  text-align: center;
+    background-color: cyan;
+    text-align: center;
 }
 
 .avatar {
-  width: 65%;
-  border-bottom: 1px solid rbg(0, 0, 0, 0.124);
+    width: 65%;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 body {
-  margin-top: 20px;
-  color: #1a202c;
-  text-align: left;
-  background-color: #e2e8f0;
+    margin-top: 20px;
+    color: #1a202c;
+    text-align: left;
+    background-color: #e2e8f0;
 }
+
 .main-body {
-  padding: 15px;
-}
-.card {
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    padding: 15px;
 }
 
 .card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
-  background-color: #fff;
-  background-clip: border-box;
-  border: 0 solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
 }
 
 .card-body {
-  flex: 1 1 auto;
-  min-height: 1px;
-  padding: 1rem;
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
 }
 
 .gutters-sm {
-  margin-right: -8px;
-  margin-left: -8px;
+    margin-right: -8px;
+    margin-left: -8px;
 }
 
 .gutters-sm > .col,
 .gutters-sm > [class*="col-"] {
-  padding-right: 8px;
-  padding-left: 8px;
+    padding-right: 8px;
+    padding-left: 8px;
 }
+
 .mb-3,
 .my-3 {
-  margin-bottom: 1rem !important;
+    margin-bottom: 1rem !important;
 }
 
 .bg-gray-300 {
-  background-color: #e2e8f0;
+    background-color: #e2e8f0;
 }
+
 .h-100 {
-  height: 100% !important;
+    height: 100% !important;
 }
+
 .shadow-none {
-  box-shadow: none !important;
+    box-shadow: none !important;
 }
 
 .form-control {
-  width: 350px !important;
-  margin-bottom: 20px;
+    width: 350px !important;
+    margin-bottom: 20px;
 }
 
 .loginContainer {
-  margin-top: 4rem;
+    margin-top: 4rem;
 }
 
 .login-form1 {
-  margin-top: 8.5rem;
+    margin-top: 8.5rem;
 }
 
 .label {
-  margin-bottom: 11px;
+    margin-bottom: 11px;
 }
+
 .login_container {
-  padding: 0 2rem;
+    padding: 0 2rem;
 }
 
 .login_btn {
-  height: 50px;
-  width: 347px;
+    height: 50px;
+    width: 347px;
 }
 
 .Welcometext {
-  margin-bottom: 2rem;
-  font-family: "Roboto", sans-serif bold;
+    margin-bottom: 2rem;
+    font-family: "Roboto", sans-serif bold;
 }
 
 .hey {
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .hey .image {
-  width: 50%;
+    width: 50%;
 }
 
 .hey img {
-  width: calc(100% - (20px * 2));
-  margin: 20px;
+    width: calc(100% - (20px * 2));
+    margin: 20px;
 }
 
 .profile-pic {
-  color: transparent;
-  transition: all 0.3s ease;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  transition: all 0.3s ease;
+    color: transparent;
+    transition: all 0.3s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
+
 .profile-pic input {
-  display: none;
+    display: none;
 }
+
 .profile-pic img {
-  position: absolute;
-  object-fit: cover;
-  width: 165px;
-  height: 165px;
-  box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.35);
-  border-radius: 100px;
-  z-index: 0;
+    position: absolute;
+    object-fit: cover;
+    width: 165px;
+    height: 165px;
+    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.35);
+    border-radius: 100px;
+    z-index: 0;
+    transition: all 0.3s ease-in-out;
 }
+
 .profile-pic .-label {
-  cursor: pointer;
-  height: 165px;
-  width: 165px;
+    cursor: pointer;
+    height: 165px;
+    width: 165px;
 }
+
 .profile-pic:hover .-label {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 10000;
-  color: #fafafa;
-  transition: background-color 0.2s ease-in-out;
-  border-radius: 100px;
-  margin-bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 10000;
+    color: #fafafa;
+    transition: background-color 0.2s ease-in-out;
+    border-radius: 100px;
+    margin-bottom: 0;
 }
+
 .profile-pic span {
-  display: inline-flex;
-  padding: 0.2em;
-  height: 2em;
+    display: inline-flex;
+    padding: 0.2em;
+    height: 2em;
 }
