--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,111 +1,110 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css"/>
 
     <title>Document</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-md">
-      <a class="navbar-brand" href="/"><img src="../logo.png" /></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarsExampleDefault"
-        aria-controls="navbarsExampleDefault"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      ><i class="fas fa-bars"></i>
-      </button>
+</head>
+<body>
+<nav class="navbar navbar-expand-md">
+    <a class="navbar-brand" href="/"><img src="../logo.png" alt="Logo"/></a>
+    <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+    ><i class="fas fa-bars"></i>
+    </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">login</a>
-          </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">login</a>
+            </li>
 
-          <li class="nav-item active">
-            <a class="nav-link" href="/register">Register</a>
-          </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/register">Register</a>
+            </li>
 
-          <li class="nav-item active">
-            <a class="nav-link" href="/profile">Profile</a>
-          </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/profile">Profile</a>
+            </li>
 
         </ul>
 
-      </div>
-    </nav>
+    </div>
+</nav>
 
-    <div class="container loginContainer">
-      <div class="row  ">
+<div class="container loginContainer">
+    <div class="row  ">
         <div class="col-sm-8 ">
-          <img src="../oleg-demakov-NIIlEEIORu0-unsplash.jpg" width="700px" height="800px" alt=""/>
+            <img src="../oleg-demakov-NIIlEEIORu0-unsplash.jpg" width="700px" height="800px" alt=""/>
         </div>
         <div class="col-sm-3 login-form1">
-         <div class="Welcometext">
-           <p>Welcome back</p>
-         <h1>
-           Login to your account
-         </h1>
-         </div>
-        
-
-      
-          <form action="/auth/login" method="post">
-            <div class="form-group">
-              <label class="label" for="email">Email</label>
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                name="email"
-              />
-           
-
-              <label class="label" for="password">Password</label>
-              <input
-                type="password"
-                class="form-control"
-                id="password"
-                name="password"
-              />
-            
-            	<div class="d-flex justify-content-center login_container">
-            <button type="submit" class=" btn btn-primary login_btn">Login</button>
+            <div class="Welcometext">
+                <p>Welcome back</p>
+                <h1>
+                    Login to your account
+                </h1>
             </div>
+
+
+            <form action="/auth/login" method="post">
+                <div class="form-group">
+                    <label class="label" for="email">Email</label>
+                    <input
+                            type="email"
+                            class="form-control"
+                            id="email"
+                            name="email"
+                    />
+
+
+                    <label class="label" for="password">Password</label>
+                    <input
+                            type="password"
+                            class="form-control"
+                            id="password"
+                            name="password"
+                    />
+
+                    <div class="d-flex justify-content-center login_container">
+                        <button type="submit" class=" btn btn-primary login_btn">Login</button>
+                    </div>
+                </div>
+            </form>
+
+            {{#if message}}
+                <h4 class="alert alert-danger mt-4">{{message}}</h4>
+            {{/if}}
+            <div class="card-text text-center">
+                <p>Dont already have an account? <br/>
+                    <a href="/register"> Join free today</a>
+                </p>
             </div>
-          </form>
-            
-        {{#if message}}
-          <h4 class="alert alert-danger mt-4">{{message}}</h4>
-        {{/if}}
-        <div class="card-text">
-          <p>Dont already have an account?<a href="/register"> join free today</a></p> 
         </div>
-        </div>
-        
-      </div>
-      </div>
 
     </div>
+</div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<script
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"
+></script>
+</body>
 </html>
