--- a/views/singletvshow.hbs
+++ b/views/singletvshow.hbs
@@ -2,185 +2,173 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="img/favicon.png">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="img/favicon.png">
 
-  <title>Single Movie</title>
-  <link rel="stylesheet" href="../css/main.css" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <title>Single Movie</title>
+    <link rel="stylesheet" href="../css/main.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+          integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-    integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+          integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
 </head>
 
 
 <body>
 
-  <nav class="navbar navbar-expand-md">
-    <a class="navbar-brand" href="/"><img src=".\logo.png" /></a>
+<nav class="navbar navbar-expand-md">
+    <a class="navbar-brand" href="/"><img src=".\logo.png" alt="Logo"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-      aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation"><i
-        class="fas fa-bars"></i>
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation"><i
+            class="fas fa-bars"></i>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/movies"><i class="fas fa-film"></i> Movies</a>
-        </li>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-            aria-expanded="false"><i class="fas fa-crown"></i> Genre</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">G</a>
-            <a class="dropdown-item" href="#">O</a>
-            <a class="dropdown-item" href="#">A</a>
-            <a class="dropdown-item" href="#">W</a>
-            <a class="dropdown-item" href="#">A</a>
-            <a class="dropdown-item" href="#">Y</a>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/movies"><i class="fas fa-film"></i> Movies</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                   aria-expanded="false"><i class="fas fa-crown"></i> Genre</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">G</a>
+                    <a class="dropdown-item" href="#">O</a>
+                    <a class="dropdown-item" href="#">A</a>
+                    <a class="dropdown-item" href="#">W</a>
+                    <a class="dropdown-item" href="#">A</a>
+                    <a class="dropdown-item" href="#">Y</a>
 
-          </div>
-        </li>
-      </ul>
-
-      <a class="nav-button" href="/movies"><i class="fas fa-newspaper"></i> Latest Movies</a>
-      </li>
-      </ul>
-
-    </div>
-  </nav>
-  <!-- breadcrumbs -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/movies">Movie</a></li>
-      <li class="breadcrumb-item"><a href="/tvshow">Tv show</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><span id="currentPage"></span></li>
-    </ol>
-  </nav>
-  <!-- /breadcrumbs -->
-  <div class="movie-buttons text-center CheackBtn">
-    <button type="button" id="recommend"class="btn btn-labeled btn-recommend">
-      <span class="btn-label"><i class="fas fa-thumbs-up"></i></span> Recommend</button>
-
-    <button type="button" id="watchlist" class="btn btn-labeled btn-watchlist">
-      <span class="btn-label"><i class="fas fa-plus"></i></span> Add to Watchlist</button>
-
-  </div>
-  <div class="container">
-    <div class="row">
-      <div id="card_contant" class="col-md-6">
-        <ul class="tvseasons">
-          <li class="">
-
-            <div id="inputField" class="Episodes">
-              <a aria-expanded="false"><i class="fas fa-film"></i>Season</a>
-              <input type="number" id="Season" class="Season"></input>
-              <a aria-expanded="false"><i class="fas fa-tv"></i>Episode</a>
-              <input type="number" id="Episode" class="Episode"></input>
-              <button type="button" id="get-url-btn">Check</button>
-            </div>
-          </li>
-
+                </div>
+            </li>
         </ul>
 
-        <iframe id="tvshow" width="920px" height="550px" src="javascript:void(0)" class="embed" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-        {{#if message}}
-        <h4 class="alert alert-danger mt-4">{{message}}</h4>
-        {{/if}}
+        <a class="nav-button" href="/movies"><i class="fas fa-newspaper"></i> Latest Movies</a>
 
+    </div>
+</nav>
+<!-- breadcrumbs -->
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/movies">Movie</a></li>
+        <li class="breadcrumb-item"><a href="/tvshow">Tv show</a></li>
+        <li class="breadcrumb-item active" aria-current="page"><span id="currentPage"></span></li>
+    </ol>
+</nav>
+<!-- /breadcrumbs -->
+<div class="movie-buttons text-center CheackBtn">
+    <button type="button" id="recommend" class="btn btn-labeled btn-recommend">
+        <span class="btn-label"><i class="fas fa-thumbs-up"></i></span> Recommend
+    </button>
 
-      </div>
+    <button type="button" id="watchlist" class="btn btn-labeled btn-watchlist">
+        <span class="btn-label"><i class="fas fa-plus"></i></span> Add to Watchlist
+    </button>
 
-      <div class="main_desc" id="main_desc">
-
-      </div>
-
-
-
+</div>
+<div>
+    <div class="row" style="margin: 4rem 0 0;">
+        <div id="card_contant" class="col-md-8">
+            <div>
+                <!--                    <div id="inputField" class="Episodes">
+                                        <a aria-expanded="false"><i class="fas fa-film"></i>Season</a>
+                                        <input type="number" id="Season" class="Season"S/>
+                                        <a aria-expanded="false"><i class="fas fa-tv"></i>Episode</a>
+                                        <input type="number" id="Episode" class="Episode"/>
+                                        <button type="button" id="get-url-btn">Check</button>
+                                    </div>-->
+            </div>
+            <iframe id="tv-show" width="920px" height="550px" src="javascript:void(0)" class="embed"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            {{#if message}}
+                <h4 class="alert alert-danger mt-4">{{message}}</h4>
+            {{/if}}
+            <div id="seasons-wrapper">
+            </div>
+            <div id="episodes-wrapper">
+            </div>
+        </div>
+        <div class="main_desc" id="main_desc">
+        </div>
     </div>
     <div class="suggestions" id="suggestions">
-
     </div>
-  </div>
-  </div>
-  <!-- Footer -->
-  <footer class="footer">
+</div>
+
+<footer class="footer">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-              <a href="page.html">About us</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="page.html">Refunds</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="page.html">Terms and Privacy</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
-          <p class="small mb-4 mb-lg-0">
-            Omar Ahmad&copy; 2022. All Rights Reserved.
-          </p>
+        <div class="row">
+            <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+                <ul class="list-inline mb-2">
+                    <li class="list-inline-item">
+                        <a href="page.html">About us</a>
+                    </li>
+                    <li class="list-inline-item">&sdot;</li>
+                    <li class="list-inline-item">
+                        <a href="page.html">Refunds</a>
+                    </li>
+                    <li class="list-inline-item">&sdot;</li>
+                    <li class="list-inline-item">
+                        <a href="page.html">Terms and Privacy</a>
+                    </li>
+                    <li class="list-inline-item">&sdot;</li>
+                    <li class="list-inline-item">
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                <p class="small mb-4 mb-lg-0">
+                    Omar Ahmad&copy; 2022. All Rights Reserved.
+                </p>
+            </div>
+            <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+                <ul class="list-inline mb-0">
+                    <li class="list-inline-item mr-3">
+                        <a href="https://linkedin.com/in/byalk" class="footer-fb">
+                            <i class="fab fa-linkedin fa-2x fa-fw"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item mr-3">
+                        <a href="#" class="footer-tw">
+                            <i class="fab fa-twitter fa-2x fa-fw"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" class="footer-in">
+                            <i class="fab fa-instagram fa-2x fa-fw"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-          <ul class="list-inline mb-0">
-            <li class="list-inline-item mr-3">
-              <a href="https://linkedin.com/in/byalk" class="footer-fb">
-                <i class="fab fa-linkedin fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item mr-3">
-              <a href="#" class="footer-tw">
-                <i class="fab fa-twitter fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#" class="footer-in">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
     </div>
-  </footer>
-  <!-- /Footer -->
+</footer>
+<!-- /Footer -->
 
 
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
-    integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-    integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
-    crossorigin="anonymous"></script>
-  <script type="module" src="tvscript.js"></script>
-
+<!-- Bootstrap core JavaScript
+  ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+        integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+        crossorigin="anonymous"></script>
+<script type="module" src="tvscript.js"></script>
 
 
 </body>
