--- a/views/tvshow.hbs
+++ b/views/tvshow.hbs
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta name="description" content="" />
-<meta name="author" content="" />
-<link rel="icon" href="img/favicon.png" />
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+<meta name="description" content=""/>
+<meta name="author" content=""/>
+<link rel="icon" href="img/favicon.png"/>
 
 <title>Tickets</title>
-<link rel="stylesheet" href="../css/main.css" type="text/css" />
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+<link rel="stylesheet" href="../css/main.css" type="text/css"/>
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
+      integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"/>
 
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-    integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous" />
+      integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous"/>
 
 
 <body>
-    <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand" href="/"><img src="../logo.png" /></a>
+<nav class="navbar navbar-expand-md">
+    <a class="navbar-brand" href="/"><img src="../logo.png" alt="Logo"/></a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
-        </button>
+        <i class="fas fa-bars"></i>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">
-                        <i class="fas fa-home"></i>
-                        Home</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/movies">
-                        <i class="fas fa-film"></i>
-                        Movies</a>
-                </li>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                        aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-crown"></i>
-                        Genre</a>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/">
+                    <i class="fas fa-home"></i>
+                    Home</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/movies">
+                    <i class="fas fa-film"></i>
+                    Movies</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                   aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-crown"></i>
+                    Genre</a>
 
-                    <div id="tags" class="dropdown-menu">
-                        <a class="tag" href="#">Adventure</a>
-                        <a class="tag" href="#">Horror</a>
-                        <a class="tag" href="#">Animation</a>
-                        <a class="tag" href="#">Comedy</a>
-                        <a class="tag" href="#">Fantasy</a>
-                    </div>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link"
-                        href="https://chrome.google.com/webstore/detail/pop-up-blocker-for-chrome/bkkbcggnhapdmkeljlodobbkopceiche">
-                        <i class="fas fa-download"></i>Download</a>
-                </li>
-            </ul>
+                <div id="tags" class="dropdown-menu">
+                    <a class="tag" href="#">Adventure</a>
+                    <a class="tag" href="#">Horror</a>
+                    <a class="tag" href="#">Animation</a>
+                    <a class="tag" href="#">Comedy</a>
+                    <a class="tag" href="#">Fantasy</a>
+                </div>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link"
+                   href="https://chrome.google.com/webstore/detail/pop-up-blocker-for-chrome/bkkbcggnhapdmkeljlodobbkopceiche">
+                    <i class="fas fa-download"></i>Download</a>
+            </li>
+        </ul>
 
-            <header>
-                <form id="form">
-                    <input type="text" placeholder="Search" id="search" class="search">
-                </form>
-            </header>
+        <header>
+            <form id="form">
+                <input type="text" placeholder="Search" id="search" class="search">
+            </form>
+        </header>
 
 
-        </div>
+    </div>
+</nav>
 </body>
 
 </html>
-</nav><!-- breadcrumbs -->
+<!-- breadcrumbs -->
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
@@ -92,30 +92,26 @@
 
 
     <div id="myNav" class="overlay">
-        <ul class="tvseasons">
-
+        <ul class="tv-seasons">
             <li class="nav-item dropdown">
-
                 <div id="inputField" class="Episodes">
                     <a aria-expanded="false">
                         <i class="fas fa-film"></i>Season</a>
-                    <input type="number" id="Season" class="Season"></input>
+                    <input type="number" id="Season" class="Season"/>
                     <a aria-expanded="false">
                         <i class="fas fa-tv"></i>Episode</a>
-                    <input type="number" id="Episode" class="Episode">
+                    <input type="number" id="Episode" class="Episode"/>
+                </div>
+
             </li>
-            </input>
             <button type="button" id="get-url-btn">Check</button>
+        </ul>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"></a>
+        <div class="overlay-content" id="overlay-content"></div>
     </div>
-    </li>
-    </ul>
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"></a>
-    <div class="overlay-content" id="overlay-content"></div>
 </div>
-</div>
-</div>
-</body><!-- Use any element to open/show the overlay navigation menu --><span onclick="openNav()"></span>
-<!-- /movie cards --><br /><!-- /Pagination-->
+<!-- Use any element to open/show the overlay navigation menu --><span onclick="openNav()"></span>
+<!-- /movie cards --><br/><!-- /Pagination-->
 <div class="pagination">
     <div class="page" id="prev">Previous Page</div>
     <div class="current" id="current">1</div>
@@ -173,15 +169,12 @@
         ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"> </script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
-    integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-    crossorigin="anonymous"></script>
+        integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+        crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-    integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
-    crossorigin="anonymous"></script>
+        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+        crossorigin="anonymous"></script>
 <script src="tvsrc.js"></script>
-</body>
-
-</html>
